# confkingdom

./: README.txt  pyproject.toml
docs/: overview_of_lions_conf_kingdom_system.md  related_work.md  using_python_confkingdom_module.md
notes/: aborted_confkingdompy_reference.md  devlog.txt  notes.txt
src/confkingdom/: __init__.py  __main__.py  confkingdom.py
test/: test_confkingdom.py
